added warehouse and serial number v 1.0.2

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-HOST=
-PORT=
-DB=
-PASSWORD=
-USER=
+MS_WAREHOUSE_HOST=
+MS_WAREHOUSE_PORT=
+MS_WAREHOUSE_DB=
+MS_WAREHOUSE_PASSWORD=
+MS_WAREHOUSE_USER=
+
+MS_WAREHOUSE_USER_NAME=user_name
+MS_WAREHOUSE_USER_PASSWORD=pass
