mypy and black v 1.0.1

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/
+../.idea/
 
 # CMake
 cmake-build-*/
@@ -153,7 +153,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+../.env
 .venv
 env/
 venv/
